<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_articles">

    <fragment
        android:id="@+id/navigation_articles"
        android:name="com.dicoding.asclepius.ui.articles.ArticlesFragment"
        android:label="@string/title_articles"
        tools:layout="@layout/fragment_articles" />

    <fragment
        android:id="@+id/navigation_detection"
        android:name="com.dicoding.asclepius.ui.detection.DetectionFragment"
        android:label="@string/title_detection"
        tools:layout="@layout/fragment_detection" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.dicoding.asclepius.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>