<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryFragment">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHistoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/history_label"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvHistoryDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_description"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/tvTotalPengecekan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_pengecekan"
                android:textSize="16sp"
                android:visibility="invisible"
                android:layout_marginStart="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="88dp"/>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/tvBelumAdaPengecekan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/belum_ada_pengecekan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>